5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4078/executions/1668_2971.log
== TEST (2019-04-15 18:53:50) 
-- CODE:
taxa_de_juros =float(input"taxa de juros: ")
valor_do_apatamento = float(input("valor do ap: "))

valor_inicial = 1500
tempo =36

qt = 1500*(1 + taxa_de_juros)**tempo

print(qt)
-- ERROR:
File "XXXX", line 1
    taxa_de_juros =float(input"taxa de juros: ")
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:54:13) 
-- CODE:
taxa_de_juros =float(input"taxa de juros: ")
valor_do_apatamento = float(input("valor do ap: "))

valor_inicial = 1500
tempo = 36

qt = 1500*(1 + taxa_de_juros)**tempo

print(qt)
-- ERROR:
File "XXXX", line 1
    taxa_de_juros =float(input"taxa de juros: ")
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:54:30) 
-- CODE:
taxa_de_juros = float(input"taxa de juros: ")
valor_do_apatamento = float(input("valor do ap: "))

valor_inicial = 1500
tempo = 36

qt = 1500*(1 + taxa_de_juros)**tempo

print(qt)
-- ERROR:
File "XXXX", line 1
    taxa_de_juros = float(input"taxa de juros: ")
                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:54:54) 
-- CODE:
taxa_de_juros = float(input"taxa de juros: ")
valor_do_apatamento = float(input("valor do ap: "))

valor_inicial = 1500
tempo = 36

qt = 1500*(1 + taxa_de_juros)**tempo

print(qt)
-- ERROR:
File "XXXX", line 1
    taxa_de_juros = float(input"taxa de juros: ")
                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
